--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -97,6 +97,7 @@
         line-height: 1.3;
         outline: none;
         border: none;
+        margin-right: -15px;
         background-color: inherit;
         cursor: pointer;
         text-decoration: none;
