--- a/single-page.css
+++ b/single-page.css
@@ -168,6 +168,7 @@ body {
   line-height: 1.3;
   outline: none;
   border: none;
+  margin-right: -15px;
   background-color: inherit;
   cursor: pointer;
   text-decoration: none;
