--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
   line-height: 1.3;
   outline: none;
   border: none;
+  margin-right: -15px;
   background-color: inherit;
   cursor: pointer;
   text-decoration: none;
@@ -258,14 +259,13 @@ body {
   transition: 0.2s ease;
 }
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 900px) {
   .header__menu-item.drop {
     align-items: start;
   }
   .header__dropdown-content {
     position: static;
     margin-top: 10px;
-    margin-left: -50px;
     background-color: inherit;
     border-radius: 0;
     box-shadow: none;
@@ -336,7 +336,7 @@ body {
     margin-top: 0;
   }
   .header__dropdown-link {
-    color: var(--text-color);
+    color: var(--color-white);
     transition: all 0.3s;
   }
   .header__dropdown-link:hover {
@@ -443,6 +443,9 @@ body {
   }
   .header__logo-img {
     width: 30px;
+  }
+  .header__menu-item {
+    gap: 10px;
   }
 }
 @media screen and (max-width: 345px) {
