--- a/scss/single-page.scss
+++ b/scss/single-page.scss
@@ -20,6 +20,8 @@
 .header {
     background-color: var(--accent-color);
     height: 65px;
+    border-bottom: none;
+    box-shadow: none;
 }
 
 .page-content {
