--- a/single-page.css
+++ b/single-page.css
@@ -1157,6 +1157,8 @@ body {
 .header {
   background-color: var(--accent-color);
   height: 65px;
+  border-bottom: none;
+  box-shadow: none;
 }
 
 .page-content {
